Add plugins to deploy to maven central (needed for communication module)